2012-01-16  Pablo Flouret  <pablof@motorola.com>

        Fix compilation errors on build-webkit --debug --no-svg --no-svg-fonts --no-svg-dom-objc-bindings on mac.
        https://bugs.webkit.org/show_bug.cgi?id=75865

        Reviewed by Hajime Morita.

        * WebView/WebFrame.mm:
        (-[WebFrame _pauseSVGAnimation:onSMILNode:atTime:]):

2012-01-15  Pablo Flouret  <pablof@motorola.com>

        Fix compilation errors on build-webkit --debug --no-video on mac.
        https://bugs.webkit.org/show_bug.cgi?id=75867

        Reviewed by Philippe Normand.

        - WebChromeClient::fullScreenRendererChanged() declaration wrongly guarded
          by VIDEO feature instead of FULLSCREEN_API.
        - _isAnyMoviePlaying implementation depends on VIDEO.

        * WebCoreSupport/WebChromeClient.h:
        * WebView/WebFullScreenController.mm:
        (-[WebFullScreenController _isAnyMoviePlaying]):

2012-01-11  Beth Dakin  <bdakin@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=75904
        WebKit 1: Scrollbar uiStateTransitionProgress requires tracking the mouse all 
        the time
        -and corresponding-
        <rdar://problem/10498816>

        Reviewed by Darin Adler.

        New ivar trackingAreaForNonKeyWindow stores our NSTrackingArea whenever we 
        have one.
        * WebView/WebHTMLView.mm:
        (-[WebHTMLViewPrivate dealloc]):
        (-[WebHTMLViewPrivate clear]):

        When we know that mouse movements won't affect anything other than 
        scrollbars, call our new function passMouseMovedEventToScrollbars(), 
        otherwise we'll call the old mouseMoved().
        (mouseEventIsPartOfClickOrDrag):
        (-[WebHTMLView _updateMouseoverWithEvent:]):

        Make sure not to remove the mouse observer when there are legacy scrollbars.
        (-[WebHTMLView removeMouseMovedObserver]):

        Set up a tracking area when the window is not key to ensure that the WebView 