@@ -1,3 +1,12 @@
+2012-01-12  Alexey Proskuryakov  <ap@apple.com>
+
+        A warning is logged to console when typing a bare "/" in Safari address bar
+        https://bugs.webkit.org/show_bug.cgi?id=76236
+
+        Reviewed by John Sullivan.
+
+        * Misc/WebNSURLExtras.mm: (+[NSURL _web_URLWithData:relativeToURL:]): Bail out early for paths.
+
 2012-01-16  Pablo Flouret  <pablof@motorola.com>
 
         Fix compilation errors on build-webkit --debug --no-svg --no-svg-fonts --no-svg-dom-objc-bindings on mac.
